# Meeting_Minutes

./: .env.example  .gitignore  CLAUDE.md  README.md  download_models.sh  pyproject.toml  setup.sh  start.sh  stop.sh
backend/: database.py  main.py  model_manager.py  models.py  pipeline.py  worker.py
backend/api/: jobs.py  meetings.py  models.py
data/: config.json
data/download_status/: firered-aed.json  sensevoice-multilingual.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: index.js
frontend/src/components/: AudioPlayer.jsx  ExportPanel.jsx  LogViewer.jsx  ModelManager.jsx  ProcessingStatus.jsx  TranscriptBlock.jsx
frontend/src/pages/: Home.jsx  Meeting.jsx
